--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   .switches label{border-radius:999px}
   @media (max-width:980px){#wrap{grid-template-columns:1fr} #advice{height:38vh}}
 
-  /* Promotion modal */
+  /* Promotion modal V10 FIXED!!!!!!!!! */
   #modal{position:fixed;inset:0;background:rgba(0,0,0,.6);display:none;align-items:center;justify-content:center;z-index:10}
   #modalInner{background:#0f111a;border:1px solid #283049;border-radius:10px;padding:14px;min-width:260px}
   #modalInner h3{margin:0 0 8px;font-size:16px}
@@ -147,14 +147,6 @@ setInterval(()=>{
 }, 200);
 function pushFeed(msg, who="sys"){ feedQueue.push({msg, who}); }
 
-// function pushFeed(msg, who="sys"){
-  const el=document.getElementById('feed');
-  const time = new Date().toLocaleTimeString();
-  const p=document.createElement('div');
-  p.style.marginBottom='8px';
-  p.innerHTML = `<span style="opacity:.7">${time}</span> — <strong>${who}:</strong> ${msg}`;
-  el.appendChild(p); el.scrollTop = el.scrollHeight;
-}
 function setOpening(text){ document.getElementById('opening').innerHTML = '<strong>Opening:</strong> '+text; }
 function sqName(sq){ const f="abcdefgh"[sq%8], r=((sq/8)|0)+1; return f+r; }
 function pieceName(pc){ const n={p:"pawn",n:"knight",b:"bishop",r:"rook",q:"queen",k:"king"}; return n[pc.t]||pc.t; }
@@ -412,7 +404,6 @@ function search(depth, alpha, beta){
   const moves=orderMoves(genMoves(S.side));
   if(moves.length===0){ if(inCheck(S.side)) return -99999+(4-depth); return 0; }
   for(const m of moves){
-    if(performance.now()-startTime > timeLimit) break;
     const snap=make(m,true);
     const sc = -search(depth-1,-beta,-alpha);
     unmake(snap);
@@ -431,25 +422,22 @@ function scoreMoveNegamax(m, depth){
   return score;
 }
 function bestMoveFor(){
-  const startTime = performance.now();
-  const timeLimit = /Mobi|Android/i.test(navigator.userAgent) ? 150 : 300;
+  const start = performance.now();
+  const limit = /Mobi|Android/i.test(navigator.userAgent) ? 150 : 300;
   let depth = dynamicDepth();
-  const elo = parseInt(document.getElementById('eloSel').value,10);
-  if(elo<=900) depth=1; else if(elo<=1400) depth=2; else if(elo<=1800) depth=3;
+  const elo = parseInt(document.getElementById('eloSel').value, 10);
+  if(elo <= 900) depth = 1;
+  else if(elo <= 1400) depth = Math.max(depth, 2);
+  else depth = Math.max(depth, 3);
   depth = Math.min(depth, 3);
-
-  const elo = parseInt(document.getElementById('eloSel').value,10);
-  let depth=2;
-  if(elo<=900) depth=1; else if(elo<=1400) depth=2; else if(elo<=1800) depth=3; depth=Math.min(depth,3);
-  else if(elo<=2300) depth=3; else if(elo<=2600) depth=4; else depth=4;
   let best=null, bestScore=-1e9;
-  const moves=orderMoves(genMoves(S.side));
+  const moves = orderMoves(genMoves(S.side));
   for(const m of moves){
-    if(performance.now()-startTime > timeLimit) break;
+    if(performance.now() - start > limit) break;
     const sc = scoreMoveNegamax(m, depth);
-    if(sc>bestScore){ bestScore=sc; best=m; }
+    if(sc > bestScore){ bestScore=sc; best=m; }
   }
-  return {move:best, score:bestScore, depth};
+  return { move: best, score: bestScore, depth };
 }
 
 /* ====== Openings (recognize + explain) ====== */
@@ -528,100 +516,9 @@ function drawBoard(){
   // Pieces
   for(let sq=0;sq<64;sq++){
     const pc=pAt(sq); if(!pc) continue;
-    const {f,r}=FR(sq); const {x,y}=boardXY(f,r);
-    drawPiece(pc, x+TILE/2, y+TILE/2);
-  }
-
-  // Threat outlines (always on, your side only)
-  drawThreatOutlines();
-
-  // Selection + legal moves dots (bright yellow)
-  if(selSq!==null){
-    const {f,r}=FR(selSq); const {x,y}=boardXY(f,r);
-    ctx.strokeStyle="#fffa"; ctx.lineWidth=3; ctx.strokeRect(x+2,y+2,TILE-4,TILE-4);
-    ctx.lineWidth=1; ctx.strokeStyle="#222";
-    for(const m of legalMoves){ if(m.from!==selSq) continue;
-      const b=FR(m.to); const pos=boardXY(b.f,b.r);
-      ctx.beginPath(); ctx.arc(pos.x+TILE/2,pos.y+TILE/2,7,0,Math.PI*2);
-      ctx.fillStyle="rgba(255,212,0,0.95)"; ctx.fill();
-    }
-  }
-
-  // Coordinates
-  ctx.fillStyle="#c9cfdf"; ctx.font="12px system-ui, sans-serif"; ctx.textAlign="center"; ctx.textBaseline="top";
-  for(let f=0; f<8; f++){ const {x}=boardXY(f,0); ctx.fillText("abcdefgh"[f], x+TILE/2, PAD + 8 + 8 + SIZE); }
-  ctx.textAlign="right"; ctx.textBaseline="middle";
-  for(let r=0; r<8; r++){ const {y}=boardXY(0,r); ctx.fillText(String(r+1), PAD-6, y+TILE/2); }
-
-  // Last move highlight
-  if(S.lastMove){
-    const a=FR(S.lastMove.from), b=FR(S.lastMove.to);
-    let pos=boardXY(a.f,a.r); ctx.fillStyle="rgba(122,162,255,0.18)"; ctx.fillRect(pos.x,pos.y,TILE,TILE);
-    pos=boardXY(b.f,b.r); ctx.fillRect(pos.x,pos.y,TILE,TILE);
-  }
+    const {f,r}return counts;
 }
-function drawPiece(pc, cx, cy){
-  const glyph={p:'♟',n:'♞',b:'♝',r:'♜',q:'♛',k:'♚'}[pc.t];
-  ctx.font=`${TILE*0.8}px serif`; ctx.textAlign='center'; ctx.textBaseline='middle';
-  ctx.fillStyle="#111"; ctx.fillText(glyph, cx, cy);
-  ctx.fillStyle=pc.c==='w'? "#fff":"#000"; ctx.fillText(glyph, cx-1, cy-1);
-}
-function drawControlMap(){
-  const us=controlCounts('w'), them=controlCounts('b');
-  for(let sq=0;sq<64;sq++){
-    const a=FR(sq); const pos=boardXY(a.f,a.r);
-    const u=us[sq], t=them[sq], total=u+t; if(total===0) continue;
-    let color=null, alpha=0.28;
-    if(u>=2 && u>t) color=`rgba(63,191,90,${alpha})`;
-    else if(t>=2 && t>u) color=`rgba(224,94,94,${alpha})`;
-    else if(Math.abs(u-t)<=1 && total>=2) color=`rgba(232,192,76,${alpha})`;
-    if(color){ ctx.fillStyle=color; ctx.fillRect(pos.x,pos.y,TILE,TILE); }
-  }
-}
-
-let cachedControl = {w: null, b: null, key: ""};
-function controlCounts(color){
-  const key = JSON.stringify(S.board)+S.side;
-  if(cachedControl[color] && cachedControl.key===key) return cachedControl[color];
-  const counts=new Array(64).fill(0);
-  for(let sq=0;sq<64;sq++){
-    const pc=pAt(sq); if(!pc||pc.c!==color) continue;
-    const {f,r}=FR(sq);
-    if(pc.t==='p'){
-      const dir= pc.c==='w'?1:-1;
-      for(const df of [-1,1]){ const cf=f+df, cr=r+dir; if(inb(cf,cr)) counts[SQ(cf,cr)]++; }
-    } else if(pc.t==='n'){
-      for(const [df,dr] of DIRS.n){ const cf=f+df, cr=r+dr; if(inb(cf,cr)) counts[SQ(cf,cr)]++; }
-    } else if(pc.t==='k'){
-      for(const [df,dr] of DIRS.q){ const cf=f+df, cr=r+dr; if(inb(cf,cr)) counts[SQ(cf,cr)]++; }
-    } else {
-      const vecs = pc.t==='b'?DIRS.b: pc.t==='r'?DIRS.r:DIRS.q;
-      for(const [df,dr] of vecs){
-        let cf=f+df, cr=r+dr;
-        while(inb(cf,cr)){ const to=SQ(cf,cr); counts[to]++; if(pAt(to)) break; cf+=df; cr+=dr; }
-      }
-    }
-  }
-  cachedControl[color] = counts; cachedControl.key = key;
-  return counts;
-}
-=FR(sq);
-    if(pc.t==='p'){
-      const dir= pc.c==='w'?1:-1;
-      for(const df of [-1,1]){ const cf=f+df, cr=r+dir; if(inb(cf,cr)) counts[SQ(cf,cr)]++; }
-    } else if(pc.t==='n'){
-      for(const [df,dr] of DIRS.n){ const cf=f+df, cr=r+dr; if(inb(cf,cr)) counts[SQ(cf,cr)]++; }
-    } else if(pc.t==='k'){
-      for(const [df,dr] of DIRS.q){ const cf=f+df, cr=r+dr; if(inb(cf,cr)) counts[SQ(cf,cr)]++; }
-    } else {
-      const vecs = pc.t==='b'?DIRS.b: pc.t==='r'?DIRS.r:DIRS.q;
-      for(const [df,dr] of vecs){
-        let cf=f+df, cr=r+dr;
-        while(inb(cf,cr)){ const to=SQ(cf,cr); counts[to]++; if(pAt(to)) break; cf+=df; cr+=dr; }
-      }
-    }
-  }
-  return counts;
+return counts;
 }
 function scanWeaknesses(){
   const msgs=[];
